extras/src/test/scala/org/bitbucket/inkytonik/kiama/example/transform/tests/test7.out
src/test/scala/org/bitbucket/inkytonik/kiama/example/transform/tests/test7.exp:1:5:error: string matching regex '[a-zA-Z]+' expected but '+' found
x + +
    ^
